# Blackbird

./: blackbird.conf  blackbird.db  main.cpp  mypipes.cpp  readPipe.out  start.sh  start.sh.save  start.sh.save.1
seasocks-async/: mysock.cpp
seasocks-async/src/app/c/: CMakeLists.txt  mysock.cpp  ws_echo.cpp
socket/: CMakeLists.txt  Makefile  socket  start.sh
socket/src/: main.cpp  main.cpp.save
socketclient/: CMakeLists.txt  socketclient  start.sh
socketclient/src/: main.cpp
src/: curl_fun.cpp  main.cpp  main.cpp.save  main.cpp.save.1  mypipes.cpp  mypipes.h
src/exchanges/: bitfinex.cpp  bitfinex.h  exmo.cpp  okcoin.cpp
src/utils/: hmac_sha512.hpp  restapi.cpp
